--- a/app/Resources/views/index_base.html.twig
+++ b/app/Resources/views/index_base.html.twig
@@ -74,11 +74,20 @@
         <!-- BEGIN CONTAINER -->
         <div id="page_container_gen" class="
           {% if route != 'lbf_admin_homepage' 
-            and route != 'lbf_admin_homepage'
+            and route != 'lbf_admin_currentOrders'
             and route != 'lbf_admin_answer'
             and route != 'lbf_admin_delete'
             and route != 'lbf_admin_complete'
-            and route != 'lbf_admin_newsletterEmails' %}
+            and route != 'lbf_admin_pastOrders'
+            and route != 'lbf_admin_users'
+            and route != 'lbf_admin_newsletter'
+            and route != 'lbf_admin_newsletterEmails'
+            and route != 'lbf_admin_elements'
+            and route != 'lbf_admin_new_element'
+            and route != 'lbf_admin_edit_element'
+            and route != 'lbf_admin_recipes'
+            and route != 'lbf_admin_new_recipe'
+            and route != 'lbf_admin_edit_element' %}
             page-container 
           {% else %}
             page-container-admin
