--- a/src/LBF/AdminBundle/Resources/views/Admin/elements.html.twig
+++ b/src/LBF/AdminBundle/Resources/views/Admin/elements.html.twig
@@ -27,12 +27,10 @@
 					  	<div id="section_admin" class="center">
 
 					  		<div class="row">
-					    		<div class="row">
-						    		<div class="float-right">
-						    			<a href="{{ path('lbf_admin_new_element') }}" class="btn btn-login">
-						    				Nouveau
-						    			</a>
-						    		</div>
+					    		<div class="row90 left">
+					    			<a href="{{ path('lbf_admin_new_element') }}" class="btn btn-admin">
+					    				Nouveau produit
+					    			</a>
 					    		</div>
 					    		{% if elements|length > 0 %}
 									<div class="table-responsive">
@@ -61,16 +59,19 @@
 				                              Category
 				                            </th>
 				                            <th class="center">
-				                              Prix
+				                              Prix (S/.)
 				                            </th>
 				                            <th class="center">
-				                              Poids
+				                              Poids (g)
 				                            </th>
 				                            <th class="center">
-				                              /
+				                              /lot
 				                            </th>
 				                            <th class="center">
 				                              Naturel ?
+				                            </th>
+				                            <th class="center">
+				                              Statut
 				                            </th>
 				                            <th class="center">
 				                              Action
@@ -107,14 +108,14 @@
 					                            </td>
 					                            <td class="center">
 					                              	{% if element.createdAt|length > 0 %}
-					                              		{{ element.createdAt|date("H:i d/M/Y") }}
+					                              		{{ element.createdAt|date("d/M/Y") }}
 					                              	{% else %}
 					                              		---
 					                              	{% endif %}
 					                            </td>
 					                            <td class="center">
 					                              	{% if element.updatedAt|length > 0 %}
-					                              		{{ element.updatedAt|date("H:i d/M/Y") }}
+					                              		{{ element.updatedAt|date("d/M/Y") }}
 					                              	{% else %}
 					                              		---
 					                              	{% endif %}
@@ -128,22 +129,21 @@
 					                            </td>
 					                            <td class="center">
 					                              	{% if element.price|length > 0 %}
-					                              		S/. {{ element.price }}
+					                              		{{ element.price }}
 					                              	{% else %}
 					                              		---
 					                              	{% endif %}
 					                            </td>
 					                            <td class="center">
 					                              	{% if element.weight|length > 0 %}
-					                              		{{ element.weight }}g
+					                              		{{ element.weight }}
 					                              	{% else %}
 					                              		---
 					                              	{% endif %}
 					                            </td>
 					                            <td class="center">
-					                              /
 					                              	{% if element.unit|length > 0 %}
-					                              		{{ element.unit }}p
+					                              		{{ element.unit }}
 					                              	{% else %}
 					                              		---
 					                              	{% endif %}
@@ -155,11 +155,34 @@
 					                              		Non
 					                              	{% endif %}
 					                            </td>
+					                            <th class="center hover_popup">
+					                            	{% if element.active %}
+					                              		{% if element.active == "active" %}
+					                              			Actif
+					                              		{% elseif element.active == "toCome" %}
+					                              			A venir
+					                              		{% elseif element.active == "soldOut" %}
+					                              			Epuisé
+					                              		{% elseif element.active == "inactive" %}
+					                              			Inactif
+					                              		{% else %}
+					                              			Erreur
+					                              			<span class="italic">
+					                              				Vous devez choisir parmi les statuts proposés
+						                              		</span>
+					                              		{% endif %}
+					                              	{% else %}
+					                              		Erreur
+					                              		<span class="italic">
+															Vous devez choisir parmi les statuts proposés
+					                              		</span>
+					                              	{% endif %}
+					                            </th>
 					                            <td class="center">
-					                            	<a href="">
+					                            	<a href="javascript:loadContentAdmin('{{ path('lbf_admin_edit_element', {'elementId':element.id}) }}')" class="btn btn-action-admin">
 						                            	<span class="glyphicon glyphicon-pencil"></span>
 					                            	</a>
-					                            	<a href="">
+					                            	<a href="javascript:areYouSureDeleteElement('{{ path('lbf_admin_delete_element', {'elementId':element.id}) }}')" class="btn btn-action-admin">
 						                            	<span class="glyphicon glyphicon-trash"></span>
 					                            	</a>
 					                            </td>
